# spindl

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
characters/spindle/: card.json
characters/spinny/: card.json  crop_settings.json
config/: spindl.yaml.example
docs/: USAGE.md
gui/: DESIGN_SYSTEM.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
gui/public/: approved-chat.html
scripts/: dev.py  launcher.py  migrate_persona.py  run_gui_standalone.py  speak_to_user.py
spindl-avatar/: .gitignore  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  vite.config.ts
spindl-avatar/src/: avatar.ts  background.ts  body.ts  expressions.ts  idle.ts  lipsync.ts  main.ts  mixer.ts  noise.ts  retarget.ts  scene.ts  spring.ts  state.ts  wind.ts  ws-client.ts
spindl-avatar/src-tauri/: Cargo.toml  tauri.conf.json
spindl-avatar/src-tauri/capabilities/: default.json
spindl-avatar/src-tauri/src/: lib.rs  main.rs
spindl-stream-deck/: index.html  package-lock.json  package.json  vite.config.ts
spindl-stream-deck/src/: main.ts  style.css  ws-client.ts
spindl-stream-deck/src-tauri/: Cargo.toml  tauri.conf.json
spindl-stream-deck/src-tauri/capabilities/: default.json
spindl-stream-deck/src-tauri/src/: lib.rs  main.rs
spindl-subtitles/: .gitignore  index.html  package.json  vite.config.ts
spindl-subtitles/src/: subtitles.css  subtitles.ts
spindl-subtitles/src-tauri/: Cargo.toml  tauri.conf.json
spindl-subtitles/src-tauri/capabilities/: default.json
spindl-subtitles/src-tauri/src/: lib.rs  main.rs
src/spindl/: __init__.py
stt/server/: nemo_server.py  requirements.txt  start_server.sh
tests/: __init__.py  conftest.py  test_paths_util.py
tests/audio/: test_playback.py  test_stream_watchdog.py  test_vad_hygiene.py
tests/avatar/: test_classifier.py
tests/characters/: __init__.py  test_exporter.py  test_importer.py  test_loader.py  test_models.py  test_png_import_export.py
tests/codex/: __init__.py  test_activation.py  test_models.py
tests/core/: test_context_manager.py  test_event_bus.py  test_mic_level.py  test_state_machine.py
tests/gui/: __init__.py  test_server.py  test_server_block_config.py  test_server_chat_history.py  test_server_create_session.py  test_server_launch_guard.py  test_server_llm_config.py  test_server_memory.py  test_server_tools_config.py  test_server_vlm_config.py  test_server_vlm_launch.py  test_server_vts.py
tests/history/: test_snapshot_store.py
tests/launcher/: test_config.py  test_service_runner_np.py
tests/llm/: test_build_context.py  test_codex_wrappers.py  test_context_provider.py  test_dialogue_injection.py  test_generation_params.py  test_history_splicing.py  test_llama_provider.py  test_openrouter_provider.py  test_prompt_block.py  test_prompt_builder.py  test_provider_holder.py  test_providers.py  test_reasoning_extractor.py  test_reasoning_pipeline.py  test_reasoning_types.py  test_tts_cleanup.py  test_twitch_injection.py
tests/memory/: test_curation_client.py  test_dedup.py  test_embedding_client.py  test_reflection.py  (+7 more)
tests_e2e/: __init__.py  conftest.py  test_character_editor_ui.py  test_character_hot_reload.py  test_message_flow.py  test_service_launch.py  test_smoke.py  test_vision_tools.py
tts/: __init__.py
(+373 files in other folders)
