[package]
name = "spindl-stream-deck"
version = "0.1.0"
description = "Stream control deck for SpindL — real-time interaction buttons"
authors = ["SpindL"]
edition = "2021"

[lib]
name = "spindl_stream_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
