[package]
name = "spindl-subtitles"
version = "0.1.0"
description = "Stream subtitle overlay for SpindL"
authors = ["SpindL"]
edition = "2021"

[lib]
name = "spindl_subtitles_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
